--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/cloudflare": "^12.6.0",
     "@astrojs/react": "^4.3.0",
     "@phosphor-icons/react": "^2.1.10",
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
